# Physical-AI-Humanoid-Robotics-Book

./: .gitignore  GEMINI.md
.gemini-tmp/: create_feature_temp.ps1  feature_description.txt  run_create_feature.ps1
.specify/memory/: constitution.md
backend/: README.md  agent.py  api.py  config.py  example_search.py  main.py  pyproject.toml  requirements.txt  retrieval.py  retrieve.py  test_import.py  test_isaac_sim_retrieval.py  test_main.py  test_query_structure.py  utils.py  verify_retrieval.py
backend/models/: chat.py  error.py
backend/tests/unit/: test_api.py
backend/utils/: errors.py  logging.py
docs/: chatbot-integration.md
frontend/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
specs/001-docusaurus-book-ui/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ros2-content-gen/: plan.md  research.md  spec.md  tasks.md
specs/002-digital-twin-content-gen/: plan.md  research.md  spec.md  tasks.md
specs/002-isaac-ai-robot-guide/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-robot-brain-isaac-content-gen/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vla-content-gen/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-data-ingestion-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-vla-content-deep-dive/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-semantic-retrieval/: plan.md  spec.md  tasks.md
specs/007-ai-agent-retrieval/: plan.md  (+5 more)
(+94 files in other folders)
