[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cohere>=5.20.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "openai>=2.14.0",
    "openai-agents>=0.6.4",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]
